[package]
name = "lg-webos-client"
version = "0.4.0"
authors = ["samuelcavalcanti111@gmail.com"]
edition = "2021"
description = "LG webOS client"
readme = "README.md"
repository = "https://github.com/samuel-cavalcanti/lg-webos-client"
license-file = "LICENSE"
keywords = ["lg", "webos", "bindings"]
resolver = "2"

[dependencies]
tokio-tungstenite = "0.14.0"
futures = "0.3.14"
futures-util = "0.3"
tokio = { version = "1.2.0", features = ["rt"] }
url = "2.1.0"
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"] }
pinky-swear = "5.1.0"
log = "0.4.0"
env_logger = "0.8.4"
async-trait = "0.1.52"
#ssdp = { git = "https://github.com/samuel-cavalcanti/ssdp-rs.git", branch = "rust-2021" }
ssdp = { path = "../ssdp-rs" }
regex = "1.7.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.2.0", default-features = false, features = ["full"] }
